<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_xd">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/background_state_of_health">

                <TextView
                    android:id="@+id/id_out_state_of_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(COMPONENT) STATE OF HEALTH"
                    android:fontFamily="@font/psa_groupe_hmi_sans_bold"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp">

                    <ImageView
                        android:id="@+id/id_icon_state_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/state_good_health_grey" />

                    <ImageView
                        android:id="@+id/id_icon_state_to_be_planned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/state_critical_maintenance_to_be_planed_grey" />

                    <ImageView
                        android:id="@+id/id_icon_state_to_be_repaired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/state_needs_to_be_repaired_grey" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_16"
                        android:fontFamily="@font/psa_groupe_hmi_sans_regular"
                        android:textColor="@color/black"
                        android:text="@string/show_more" />

                    <ImageView
                        android:id="@+id/id_arrow_expand_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_down"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:layout_marginTop="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_health"
                        android:textAllCaps="true"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="#61AB48"
                        android:textSize="@dimen/text_size_16" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psa_groupe_hmi_sans_regular"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/black"
                        android:text="@string/description_good_health" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/critical_maintenance_to_be_planned"
                        android:textAllCaps="true"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="#DAAB47"
                        android:textSize="@dimen/text_size_16" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psa_groupe_hmi_sans_regular"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/black"
                        android:text="@string/description_critical_maintenance_to_be_planned" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/needs_to_be_repaired"
                        android:textAllCaps="true"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="#D10000"
                        android:textSize="@dimen/text_size_16" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psa_groupe_hmi_sans_regular"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/black"
                        android:text="@string/description_needs_to_be_repaired" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_size_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/feedback_help"
                    android:layout_marginStart="@dimen/text_size_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_help"
                    android:fontFamily="@font/psa_groupe_hmi_sans_bold"
                    android:textSize="@dimen/text_size_14"
                    android:layout_centerHorizontal="true"
                    android:textColor="#4665FC" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>